Fix image width bug on mobile

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -285,6 +285,7 @@ img {
 }
 .tmpl-post .portrait-image, .tmpl-post .portrait-image img {
   max-width:29rem;
+  width: 100%;
 }
 
 section.bg-secondary {
